// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Store /> renders 1`] = `
<DocumentFragment>
  ok
</DocumentFragment>
`;

exports[`withStore init function takes props 1`] = `
<DocumentFragment>
  {"thing":"val"}
</DocumentFragment>
`;

exports[`withStore renders 1`] = `
<DocumentFragment>
  ok
</DocumentFragment>
`;
